--- a/context/pom.xml
+++ b/context/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.itis</groupId>
     <artifactId>context</artifactId>
-    <version>1.2</version>
+    <version>1.8</version>
     <build>
         <plugins>
             <plugin>
@@ -25,6 +25,12 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>0.9.11</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
